--- a/app/src/main/res/layout/activity_question_list.xml
+++ b/app/src/main/res/layout/activity_question_list.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/swipe_question"
+    android:orientation="vertical"
     tools:context="com.lqq.test.work_demo_0830.Activities.QuestionListActivity">
 
-    <ListView
-        android:id="@+id/lv_question"
+    <include layout="@layout/custom_toolbar"/>
+
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:cacheColorHint="@android:color/transparent" >
-    </ListView>
+        android:id="@+id/swipe_question"
+        >
 
-</android.support.v4.widget.SwipeRefreshLayout>
+        <ListView
+            android:id="@+id/lv_question"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:cacheColorHint="@android:color/transparent" >
+        </ListView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+</LinearLayout>
