--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -4,9 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/custom_toolbar"
-    android:background="?attr/colorPrimary"
+    android:background="@color/actionbar_bg"
     android:minHeight="?attr/actionBarSize"
     android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     xmls:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+
 
 </android.support.v7.widget.Toolbar>
