--- a/app/src/main/res/layout/nickname_set.xml
+++ b/app/src/main/res/layout/nickname_set.xml
@@ -19,6 +19,7 @@
         android:src="@drawable/divider_line"/>
 
     <EditText
+        android:id="@+id/et_nickname"
         android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
