--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,12 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding="16dp"
+    android:orientation="vertical"
     tools:context="com.lqq.test.work_demo_0830.Activities.RegisterActivity">
 
-</RelativeLayout>
+    <include layout="@layout/custom_toolbar"/>
+
+    <EditText
+        android:layout_marginTop="16dp"
+        android:id="@+id/et_register_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="用户名只能用字母以及3位以上！"/>
+    <EditText
+        android:layout_marginTop="16dp"
+        android:id="@+id/et_register_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="密码是数字及至少4位以上！"/>
+    <EditText
+        android:layout_marginTop="16dp"
+        android:id="@+id/et_register_nickname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="昵称"/>
+    <EditText
+        android:layout_marginTop="16dp"
+        android:id="@+id/et_register_telephone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="电话"/>
+
+    <Button
+        android:id="@+id/btn_register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="注册"/>
+
+</LinearLayout>
